--- a/Pizzeria/Views/Pizza/Create.cshtml
+++ b/Pizzeria/Views/Pizza/Create.cshtml
@@ -10,14 +10,17 @@
         <div class="mb-3">
             <label>Titolo:</label>
             <input asp-for="Name" type="text" class="form-control"/>
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label>Descrizione:</label>
             <textarea asp-for="Description" class="d-block w-100" rows="8"></textarea>
+            <span asp-validation-for="Description" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label>Url Immagine:</label>
             <input asp-for="Image" type="text" class="form-control"/>
+            <span asp-validation-for="Image" class="text-danger"></span>
         </div>
         <button type="submit" class="btn btn-primary">Salva</button>
     </form>
