Aggiunta la funzione di modifica

--- a/Pizzeria/Views/Pizza/Index.cshtml
+++ b/Pizzeria/Views/Pizza/Index.cshtml
@@ -28,6 +28,7 @@
                     <li class="list-group-item lh-lg">
                         <button type="button" class="btn btn-warning">7,00€</button>
                         <a class="btn btn-primary" href="@Url.Action("Details", new { id = pizza.Id } )" role="button">Dettagli</a>
+                            <a class="btn btn-primary" href="@Url.Action("Edit", new { id = pizza.Id } )" role="button">Modifica</a>
                     </li>
                 </ul>
         </div>
