--- a/Pizzeria/Views/Pizza/Index.cshtml
+++ b/Pizzeria/Views/Pizza/Index.cshtml
@@ -22,13 +22,15 @@
                 </div>
         <ul class="list-group list-group-flush">
                     <li class="list-group-item py-4">
-                        @pizza.Description
+                        @pizza.Description <br>
+                            <button type="button" class="btn btn-warning mt-3">7,00€</button>
                     </li>
 
                     <li class="list-group-item lh-lg">
-                        <button type="button" class="btn btn-warning">7,00€</button>
-                        <a class="btn btn-primary" href="@Url.Action("Details", new { id = pizza.Id } )" role="button">Dettagli</a>
-                            <a class="btn btn-primary" href="@Url.Action("Edit", new { id = pizza.Id } )" role="button">Modifica</a>
+                        
+                            <a class="btn btn-primary mx-1" href="@Url.Action("Details", new { id = pizza.Id } )" role="button">Dettagli</a>
+                            <a class="btn btn-info mx-1" href="@Url.Action("Edit", new { id = pizza.Id } )" role="button">Modifica</a>
+                            <a class="btn btn-danger mx-1" href="@Url.Action("Delete", new { id = pizza.Id } )" role="button">X</a>
                     </li>
                 </ul>
         </div>
